*linphone-3.8.4 (10 Jun 2015)

  10 Jun 2015; Guillaume Horel <guillaume.horel@gmail.com>
  +linphone-3.8.4.ebuild, -linphone-3.8.3.ebuild:
  net-voip/linphone: version bump

*linphone-3.8.3 (07 Jun 2015)

  07 Jun 2015; Guillaume Horel <guillaume.horel@gmail.com>
  +linphone-3.8.3.ebuild, -linphone-3.8.2.ebuild:
  net-voip/linphone: version bump

*linphone-3.8.2 (11 May 2015)

  11 May 2015; Guillaume Horel <guillaume.horel@gmail.com>
  +linphone-3.8.2.ebuild, -linphone-3.8.1.ebuild:
  net-voip/linphone: version bump