@@ -1,2 +1,2 @@
 DIST linphone-3.8.1.tar.gz 15327283 SHA256 8d45bc9ec9a795a29bfdbf60c665bdfa81b46f3c83e870d50ad7c3f25156bca7 SHA512 f9f0b9549961485988efa963b3eba7f2c9a96ea4b0b0d5e206a944479ac9171f25f56183874c281f885a691e96843bd0cec361826b15c2fa20d61f533c6c9712 WHIRLPOOL 846e1bc8ff89ebe9a27e9567c94b31c20f767e4b29af3a4ed42858b82c55c43eb613016fd706ecf93d0afaa3c15e26c2076fa56127fa07ecf233bb805875c205
-DIST linphone-3.8.4.tar.gz 9590453 SHA256 9b0354489cdb60804e83e53dab903c498ec2d5943c7598b77ed35f7d03321b20 SHA512 db3e5c2562a2b5b7c19222993190c2948c8c5ac71ba5d7e5eb06aaedb730cecf5a17dc3a41c699dbcb87bf020d71fc2189e33f3508a7c920148129c087aa2cad WHIRLPOOL b39f6c0eeab70d19254cfc887003a03bd1a7568536d538dc8ce54be2490529e050476c07d2de380feff90c1e9f838b7ad82cd64e44ac1c7ebef94456fe33455d
+DIST linphone-3.8.5.tar.gz 15459886 SHA256 6fda70486088f44617782b6aa70008a04d1c410df296fee9594797e3c3629e12 SHA512 462e132cf4f43164fdcdfa8133a8574d4ec27ffdd1bd9083e57b6fc3f4174091a4811ec5a77ab79cc8490101f88e39f17dec38e2eb25dfeffdaa013d9135747b WHIRLPOOL 8d726db955957235e891d9e33f93fbf3dad3d1c07573330dc914da32029f48dc64dc2a62da7274961deca29d9cdc0040a6728e9eb5bed036fda47c450e9bf4c2
