@@ -1,3 +1,9 @@
+*linphone-3.8.5 (12 Jul 2015)
+
+  12 Jul 2015; Guillaume Horel <guillaume.horel@gmail.com>
+  +linphone-3.8.5.ebuild, -linphone-3.8.4.ebuild, metadata.xml:
+  net-voip/linphone: version bump
+
 *linphone-3.8.4 (10 Jun 2015)
 
   10 Jun 2015; Guillaume Horel <guillaume.horel@gmail.com>
